[tool.poetry]
name = "stac-planet-api"
version = "0.1.0"
description = ""
authors = ["Rhys Evans <rhys.r.evans@stfc.ac.uk>", "Guyon Duifhuizen <guyon.duifhuizen@planet.com>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.10.6"
stac-fastapi-types = "3.0.0b2"
stac-fastapi-api = "3.0.0b2"
stac-fastapi-extensions = "3.0.0b2"
pygeofilter = "^0.2.4"
stac-pydantic = "^3.1.1"
fastapi = "^0.111.1"
httpx = "^0.27.0"
cryptography = "^43.0.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.black.dependencies]
black = "^24.4.2"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.10.1"

[tool.poetry.group.bandit.dependencies]
bandit = "^1.7.9"

[tool.poetry.group.ruff.dependencies]
ruff = "^0.5.2"

[tool.poetry.group.isort.dependencies]
isort = "^5.13.2"

[tool.poetry.group.xenon.dependencies]
xenon = "^0.9.1"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
